jiffyparser/jiffy_parser.go
// Generated from Jiffy.g4 by ANTLR 4.7.

package parser // Jiffy

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "", "", "", "", "'-'",
}
var symbolicNames = []string{
	"", "D", "H", "M", "S", "Y", "MINUS", "MICROSECOND", "MICROSECONDS", "MS",
	"MILLISECOND", "MILLISECONDS", "SEC", "SECOND", "SECONDS", "MIN", "MINUTE",
	"MINUTES", "HRS", "HOUR", "HOURS", "DAY", "DAYS", "MON", "MONTH", "MONTHS",
	"YEAR", "YEARS", "AND", "DECIMAL_LITERAL", "REAL_LITERAL", "SPACE",
}

var ruleNames = []string{
	"root", "timeexpr", "timeatom", "microsecond", "millisecond", "second",
	"minute", "hour", "day", "month", "year", "decimalLiteral", "realLiteral",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type JiffyParser struct {
	*antlr.BaseParser
}

func NewJiffyParser(input antlr.TokenStream) *JiffyParser {
	this := new(JiffyParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Jiffy.g4"

	return this
}

// JiffyParser tokens.
const (
	JiffyParserEOF             = antlr.TokenEOF
	JiffyParserD               = 1
	JiffyParserH               = 2
	JiffyParserM               = 3
	JiffyParserS               = 4
	JiffyParserY               = 5
	JiffyParserMINUS           = 6
	JiffyParserMICROSECOND     = 7
	JiffyParserMICROSECONDS    = 8
	JiffyParserMS              = 9
	JiffyParserMILLISECOND     = 10
	JiffyParserMILLISECONDS    = 11
	JiffyParserSEC             = 12
	JiffyParserSECOND          = 13
	JiffyParserSECONDS         = 14
	JiffyParserMIN             = 15
	JiffyParserMINUTE          = 16
	JiffyParserMINUTES         = 17
	JiffyParserHRS             = 18
	JiffyParserHOUR            = 19
	JiffyParserHOURS           = 20
	JiffyParserDAY             = 21
	JiffyParserDAYS            = 22
	JiffyParserMON             = 23
	JiffyParserMONTH           = 24
	JiffyParserMONTHS          = 25
	JiffyParserYEAR            = 26
	JiffyParserYEARS           = 27
	JiffyParserAND             = 28
	JiffyParserDECIMAL_LITERAL = 29
	JiffyParserREAL_LITERAL    = 30
	JiffyParserSPACE           = 31
)

// JiffyParser rules.
const (
	JiffyParserRULE_root           = 0
	JiffyParserRULE_timeexpr       = 1
	JiffyParserRULE_timeatom       = 2
	JiffyParserRULE_microsecond    = 3
	JiffyParserRULE_millisecond    = 4
	JiffyParserRULE_second         = 5
	JiffyParserRULE_minute         = 6
	JiffyParserRULE_hour           = 7
	JiffyParserRULE_day            = 8
	JiffyParserRULE_month          = 9
	JiffyParserRULE_year           = 10
	JiffyParserRULE_decimalLiteral = 11
	JiffyParserRULE_realLiteral    = 12
)

// IRootContext is an interface to support dynamic dispatch.
type IRootContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRootContext differentiates from other interfaces.
	IsRootContext()
}

type RootContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRootContext() *RootContext {
	var p = new(RootContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JiffyParserRULE_root
	return p
}

func (*RootContext) IsRootContext() {}

func NewRootContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RootContext {
	var p = new(RootContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JiffyParserRULE_root

	return p
}

func (s *RootContext) GetParser() antlr.Parser { return s.parser }

func (s *RootContext) Timeexpr() ITimeexprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITimeexprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITimeexprContext)
}

func (s *RootContext) EOF() antlr.TerminalNode {
	return s.GetToken(JiffyParserEOF, 0)
}

func (s *RootContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RootContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RootContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.EnterRoot(s)
	}
}

func (s *RootContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.ExitRoot(s)
	}
}

func (p *JiffyParser) Root() (localctx IRootContext) {
	localctx = NewRootContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, JiffyParserRULE_root)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(26)
		p.Timeexpr()
	}
	{
		p.SetState(27)
		p.Match(JiffyParserEOF)
	}

	return localctx
}

// ITimeexprContext is an interface to support dynamic dispatch.
type ITimeexprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTimeexprContext differentiates from other interfaces.
	IsTimeexprContext()
}

type TimeexprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTimeexprContext() *TimeexprContext {
	var p = new(TimeexprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JiffyParserRULE_timeexpr
	return p
}

func (*TimeexprContext) IsTimeexprContext() {}

func NewTimeexprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TimeexprContext {
	var p = new(TimeexprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JiffyParserRULE_timeexpr

	return p
}

func (s *TimeexprContext) GetParser() antlr.Parser { return s.parser }

func (s *TimeexprContext) AllTimeatom() []ITimeatomContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITimeatomContext)(nil)).Elem())
	var tst = make([]ITimeatomContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITimeatomContext)
		}
	}

	return tst
}

func (s *TimeexprContext) Timeatom(i int) ITimeatomContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITimeatomContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITimeatomContext)
}

func (s *TimeexprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TimeexprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TimeexprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.EnterTimeexpr(s)
	}
}

func (s *TimeexprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.ExitTimeexpr(s)
	}
}

func (p *JiffyParser) Timeexpr() (localctx ITimeexprContext) {
	localctx = NewTimeexprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, JiffyParserRULE_timeexpr)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(29)
		p.Timeatom()
	}
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<JiffyParserMINUS)|(1<<JiffyParserDECIMAL_LITERAL)|(1<<JiffyParserREAL_LITERAL))) != 0 {
		{
			p.SetState(30)
			p.Timeatom()
		}

		p.SetState(35)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ITimeatomContext is an interface to support dynamic dispatch.
type ITimeatomContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTimeatomContext differentiates from other interfaces.
	IsTimeatomContext()
}

type TimeatomContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTimeatomContext() *TimeatomContext {
	var p = new(TimeatomContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JiffyParserRULE_timeatom
	return p
}

func (*TimeatomContext) IsTimeatomContext() {}

func NewTimeatomContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TimeatomContext {
	var p = new(TimeatomContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JiffyParserRULE_timeatom

	return p
}

func (s *TimeatomContext) GetParser() antlr.Parser { return s.parser }

func (s *TimeatomContext) Microsecond() IMicrosecondContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMicrosecondContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMicrosecondContext)
}

func (s *TimeatomContext) Millisecond() IMillisecondContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMillisecondContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMillisecondContext)
}

func (s *TimeatomContext) Second() ISecondContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISecondContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISecondContext)
}

func (s *TimeatomContext) Minute() IMinuteContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMinuteContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMinuteContext)
}

func (s *TimeatomContext) Hour() IHourContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IHourContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IHourContext)
}

func (s *TimeatomContext) Day() IDayContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDayContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDayContext)
}

func (s *TimeatomContext) Month() IMonthContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMonthContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMonthContext)
}

func (s *TimeatomContext) Year() IYearContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IYearContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IYearContext)
}

func (s *TimeatomContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TimeatomContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TimeatomContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.EnterTimeatom(s)
	}
}

func (s *TimeatomContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.ExitTimeatom(s)
	}
}

func (p *JiffyParser) Timeatom() (localctx ITimeatomContext) {
	localctx = NewTimeatomContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, JiffyParserRULE_timeatom)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(44)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(36)
			p.Microsecond()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(37)
			p.Millisecond()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(38)
			p.Second()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(39)
			p.Minute()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(40)
			p.Hour()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(41)
			p.Day()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(42)
			p.Month()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(43)
			p.Year()
		}

	}

	return localctx
}

// IMicrosecondContext is an interface to support dynamic dispatch.
type IMicrosecondContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMicrosecondContext differentiates from other interfaces.
	IsMicrosecondContext()
}

type MicrosecondContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMicrosecondContext() *MicrosecondContext {
	var p = new(MicrosecondContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JiffyParserRULE_microsecond
	return p
}

func (*MicrosecondContext) IsMicrosecondContext() {}

func NewMicrosecondContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MicrosecondContext {
	var p = new(MicrosecondContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JiffyParserRULE_microsecond

	return p
}

func (s *MicrosecondContext) GetParser() antlr.Parser { return s.parser }

func (s *MicrosecondContext) DecimalLiteral() IDecimalLiteralContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDecimalLiteralContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDecimalLiteralContext)
}

func (s *MicrosecondContext) MICROSECOND() antlr.TerminalNode {
	return s.GetToken(JiffyParserMICROSECOND, 0)
}

func (s *MicrosecondContext) MICROSECONDS() antlr.TerminalNode {
	return s.GetToken(JiffyParserMICROSECONDS, 0)
}

func (s *MicrosecondContext) RealLiteral() IRealLiteralContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRealLiteralContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRealLiteralContext)
}

func (s *MicrosecondContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MicrosecondContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MicrosecondContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.EnterMicrosecond(s)
	}
}

func (s *MicrosecondContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.ExitMicrosecond(s)
	}
}

func (p *JiffyParser) Microsecond() (localctx IMicrosecondContext) {
	localctx = NewMicrosecondContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, JiffyParserRULE_microsecond)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(52)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(46)
			p.DecimalLiteral()
		}
		p.SetState(47)
		_la = p.GetTokenStream().LA(1)

		if !(_la == JiffyParserMICROSECOND || _la == JiffyParserMICROSECONDS) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(49)
			p.RealLiteral()
		}
		p.SetState(50)
		_la = p.GetTokenStream().LA(1)

		if !(_la == JiffyParserMICROSECOND || _la == JiffyParserMICROSECONDS) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}

	}

	return localctx
}

// IMillisecondContext is an interface to support dynamic dispatch.
type IMillisecondContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMillisecondContext differentiates from other interfaces.
	IsMillisecondContext()
}

type MillisecondContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMillisecondContext() *MillisecondContext {
	var p = new(MillisecondContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JiffyParserRULE_millisecond
	return p
}

func (*MillisecondContext) IsMillisecondContext() {}

func NewMillisecondContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MillisecondContext {
	var p = new(MillisecondContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JiffyParserRULE_millisecond

	return p
}

func (s *MillisecondContext) GetParser() antlr.Parser { return s.parser }

func (s *MillisecondContext) DecimalLiteral() IDecimalLiteralContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDecimalLiteralContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDecimalLiteralContext)
}

func (s *MillisecondContext) MS() antlr.TerminalNode {
	return s.GetToken(JiffyParserMS, 0)
}

func (s *MillisecondContext) MILLISECOND() antlr.TerminalNode {
	return s.GetToken(JiffyParserMILLISECOND, 0)
}

func (s *MillisecondContext) MILLISECONDS() antlr.TerminalNode {
	return s.GetToken(JiffyParserMILLISECONDS, 0)
}

func (s *MillisecondContext) RealLiteral() IRealLiteralContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRealLiteralContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRealLiteralContext)
}

func (s *MillisecondContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MillisecondContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MillisecondContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.EnterMillisecond(s)
	}
}

func (s *MillisecondContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.ExitMillisecond(s)
	}
}

func (p *JiffyParser) Millisecond() (localctx IMillisecondContext) {
	localctx = NewMillisecondContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, JiffyParserRULE_millisecond)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(54)
			p.DecimalLiteral()
		}
		p.SetState(55)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<JiffyParserMS)|(1<<JiffyParserMILLISECOND)|(1<<JiffyParserMILLISECONDS))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(57)
			p.RealLiteral()
		}
		p.SetState(58)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<JiffyParserMS)|(1<<JiffyParserMILLISECOND)|(1<<JiffyParserMILLISECONDS))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}

	}

	return localctx
}

// ISecondContext is an interface to support dynamic dispatch.
type ISecondContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSecondContext differentiates from other interfaces.
	IsSecondContext()
}

type SecondContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySecondContext() *SecondContext {
	var p = new(SecondContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JiffyParserRULE_second
	return p
}

func (*SecondContext) IsSecondContext() {}

func NewSecondContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SecondContext {
	var p = new(SecondContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JiffyParserRULE_second

	return p
}

func (s *SecondContext) GetParser() antlr.Parser { return s.parser }

func (s *SecondContext) DecimalLiteral() IDecimalLiteralContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDecimalLiteralContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDecimalLiteralContext)
}

func (s *SecondContext) S() antlr.TerminalNode {
	return s.GetToken(JiffyParserS, 0)
}

func (s *SecondContext) SEC() antlr.TerminalNode {
	return s.GetToken(JiffyParserSEC, 0)
}

func (s *SecondContext) SECOND() antlr.TerminalNode {
	return s.GetToken(JiffyParserSECOND, 0)
}

func (s *SecondContext) SECONDS() antlr.TerminalNode {
	return s.GetToken(JiffyParserSECONDS, 0)
}

func (s *SecondContext) RealLiteral() IRealLiteralContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRealLiteralContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRealLiteralContext)
}

func (s *SecondContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SecondContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SecondContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.EnterSecond(s)
	}
}

func (s *SecondContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JiffyListener); ok {
		listenerT.ExitSecond(s)
	}
}

func (p *JiffyParser) Second() (localctx ISecondContext) {
	localctx = NewSecondContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, JiffyParserRULE_second)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(62)
			p.DecimalLiteral()
		}
		p.SetState(63)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<JiffyParserS)|(1<<JiffyParserSEC)|(1<<JiffyParserSECOND)|(1<<JiffyParserSECONDS))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(65)
			p.RealLiteral()
		}
		p.SetState(66)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<JiffyParserS)|(1<<JiffyParserSEC)|(1<<JiffyParserSECOND)|(1<<JiffyParserSECONDS))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}

	}

	return localctx
}

// IMinuteContext is an interface to support dynamic dispatch.
type IMinuteContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMinuteContext differentiates from other interfaces.
	IsMinuteContext()
}

type MinuteContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMinuteContext() *MinuteContext {
	var p = new(MinuteContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JiffyParserRULE_minute
	return p
}

func (*MinuteContext) IsMinuteContext() {}

func NewMinuteContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MinuteContext {
	var p = new(MinuteContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JiffyParserRULE_minute

	return p
}
